--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,4 @@
-.example-container {
+/* .example-container {
     display: flex;
     flex-direction: column;
   }
@@ -18,4 +18,7 @@
   
   input.example-right-align {
     -moz-appearance: textfield;
+  } */
+  login{
+   height: 100%;
   }
