--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,64 +1,37 @@
+<mat-toolbar color="primary" fxLayoutAlign="center center">
+    <span>Sales Analytics</span>
+</mat-toolbar>
 
-  <mat-toolbar color="primary">
-    <mat-toolbar-row>
-    <span>My First App</span>
-        <span class="example-fill-remaining-space"></span>
-        <span class="align-center"></span>
-        <span class="example-spacer"></span>
-        <button mat-button>About</button>
-        <button mat-button>Contact</button>
-        <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>more_vert</mat-icon>
-    </button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item>
-        <mat-icon>dialpad</mat-icon>
-        <span>Redial</span>
-      </button>
-      <button mat-menu-item disabled>
-        <mat-icon>voicemail</mat-icon>
-        <span>Check voicemail</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon>notifications_off</mat-icon>
-        <span>Disable alerts</span>
-      </button>
-    </mat-menu>
-     </mat-toolbar-row>
-    </mat-toolbar>
+<div class="content login" fxLayout="row" fxLayout.xs="column " fxFlexFill fxLayoutAlign="center center">
 
-  <div class="row">
-    <div class="col m2"></div>
-    <div class="col m6">
-  <mat-card class="example-card">
-    <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <form class="example-form">
-        <table class="example-full-width" cellspacing="0">
-          <tr>
-            <td>
-              <mat-form-field class="example-full-width">
-              <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
-              </mat-form-field>
-            </td>
-          </tr>
-          <tr>
-          <td><mat-form-field class="example-full-width">
-            <input matInput placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
-          </mat-form-field></td>
-        </tr></table>
-      </form>
-      <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button (click)="login()" color="primary">Login</button>
-    </mat-card-actions>
-  </mat-card>
+  <div fxFlex="30"  fxFlex.xs="100"  fxFlex.sm="80">
+          <mat-card class="example-card">
+            <mat-card-header>
+              <mat-card-title>Login</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <form class="example-form">
+                <div class="example-container" fxLayout="column">
+                  <mat-form-field fxFlex>
+                    <input matInput placeholder="Username">
+                  </mat-form-field>
+
+                  <mat-form-field fxFlex>
+                    <input matInput placeholder="Password" type="password">
+                  </mat-form-field>
+
+                </div>
+              </form>
+              <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-raised-button (click)="login()" color="primary">Login</button>
+            </mat-card-actions>
+          </mat-card>
   </div>
- 
-  </div>
+
+</div>
+  
 
 
 
