--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,11 @@
 .mat-table{
     width: 100%
 }
+.table-striped>tbody>tr:nth-of-type(odd) {
+    background-color: #e2e0e0;
+}
+
+.table-striped>tbody>tr:nth-of-type(even) {
+    background-color: #edeaea;
+}
+
