--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'11px'}"
                               [style]="{'font-size':'12px'}">
           </kendo-grid-column>
-          <kendo-grid-column field="apiName" title="" width="60"
+          <kendo-grid-column field="calculationType" title="" width="60"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'11px'}"
                               [style]="{'font-size':'11px'}" [footerStyle]="rightAlign">
           </kendo-grid-column>
