--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,37 +3,37 @@
 
     <div fxLayout="row" fxLayout.xs="column " fxFlexAlign="center center" style="height: 100;margin-top:5%">
     <div fxFlex="50" fxFlex.xs="90" fxFlex.sm="90" style="margin: 0 auto">
-    <kendo-pdf-export #pdf paperSize="A4" margin=".5cm">
+    <kendo-pdf-export #pdf paperSize="A4" margin="20px">
       
     <div class="items">
         <kendo-grid [data]="data" scrollable="none">
           <kendo-grid-column field="heading" title="" width="60"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'11px'}"
-                              [style]="{'font-size':'12px'}">
+                              [style]="tableStyleHeader">
           </kendo-grid-column>
           <kendo-grid-column field="calculationType" title="" width="60"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'11px'}"
-                              [style]="{'font-size':'11px'}" [footerStyle]="rightAlign">
+                              [style]="tableStyle" [footerStyle]="rightAlign">
           </kendo-grid-column>
           <kendo-grid-column field="tier1" title="Tier1" width="90"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'11px'}"
-                              [style]="{'font-size':'11px'}" [footerStyle]="rightAlign">
+                              [style]="tableStyle" [footerStyle]="rightAlign">
           </kendo-grid-column>
           <kendo-grid-column field="tier2" title="Tier2" width="90"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'11px'}"
-                              [style]="{'font-size':'11px'}" [footerStyle]="rightAlign">
+                              [style]="tableStyle" [footerStyle]="rightAlign">
           </kendo-grid-column>
           <kendo-grid-column field="tier3" title="Tier3" width="90"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'11px'}"
-                              [style]="{'font-size':'11px'}" [footerStyle]="rightAlign">
+                              [style]="tableStyle" [footerStyle]="rightAlign">
           </kendo-grid-column>
           <kendo-grid-column field="tier4" title="Tier4" width="90"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'11px'}"
-                              [style]="{'font-size':'11px'}" [footerStyle]="rightAlign">
+                              [style]="tableStyle" [footerStyle]="rightAlign">
           </kendo-grid-column>
           <kendo-grid-column field="total" title="Total" width="90"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'11px'}"
-                              [style]="{'font-size':'11px'}" [footerStyle]="rightAlign">
+                              [style]="tableStyle" [footerStyle]="rightAlign">
           </kendo-grid-column>
          
         </kendo-grid>
