--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,5 +8,9 @@
 .table-striped>tbody>tr:nth-of-type(even) {
     background-color: #edeaea;
 }
+kendo-pdf-document td {
+    color: red !important;
+
+}
 
 
