--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,13 +3,13 @@
 
     <div fxLayout="row" fxLayout.xs="column " fxFlexAlign="center center" style="height: 100;margin-top:5%">
     <div fxFlex="50" fxFlex.xs="90" fxFlex.sm="90" style="margin: 0 auto">
-    <kendo-pdf-export #pdf paperSize="A4" margin="20px">
+    <kendo-pdf-export #pdf paperSize="A4" margin=".5cm" [scale]="0.7">
       
     <div class="items">
         <kendo-grid [data]="data" scrollable="none">
           <kendo-grid-column field="heading" title="" width="60"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'11px'}"
-                              [style]="tableStyleHeader">
+                              [style]="tableStyleHeader" >
           </kendo-grid-column>
           <kendo-grid-column field="calculationType" title="" width="60"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'11px'}"
