add sku details

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,19 +17,37 @@
           </kendo-grid-column>
           <kendo-grid-column field="tier1" title="Tier1"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'14px'}"
-                              [style]="tableStyle" [footerStyle]="rightAlign">
+                              [style]="tableStyle" [footerStyle]="rightAlign" >
+
+                            <ng-template kendoGridCellTemplate let-dataItem>
+                               <a [ngClass]="{'sku-class':dataItem.isSku,'no-sku-class':!dataItem.isSku}" (click)="onSkuClick(dataItem.sku_tier1)">{{dataItem.tier1}}</a> 
+    
+                            </ng-template>
+             
           </kendo-grid-column>
           <kendo-grid-column field="tier2" title="Tier2"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'14px'}"
                               [style]="tableStyle" [footerStyle]="rightAlign">
+                              <ng-template kendoGridCellTemplate let-dataItem>
+                                <a [ngClass]="{'sku-class':dataItem.isSku,'no-sku-class':!dataItem.isSku}" (click)="onSkuClick(dataItem.sku_tier2)">{{dataItem.tier2}}</a> 
+     
+                             </ng-template>
           </kendo-grid-column>
           <kendo-grid-column field="tier3" title="Tier3"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'14px'}"
                               [style]="tableStyle" [footerStyle]="rightAlign">
+                              <ng-template kendoGridCellTemplate let-dataItem>
+                                <a [ngClass]="{'sku-class':dataItem.isSku,'no-sku-class':!dataItem.isSku}" (click)="onSkuClick(dataItem.sku_tier3)">{{dataItem.tier3}}</a> 
+     
+                             </ng-template>
           </kendo-grid-column>
           <kendo-grid-column field="tier4" title="Tier4"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'14px'}"
                               [style]="tableStyle" [footerStyle]="rightAlign">
+                              <ng-template kendoGridCellTemplate let-dataItem>
+                                <a [ngClass]="{'sku-class':dataItem.isSku,'no-sku-class':!dataItem.isSku}" (click)="onSkuClick(dataItem.sku_tier4)">{{dataItem.tier4}}</a> 
+     
+                             </ng-template>
           </kendo-grid-column>
           <kendo-grid-column field="total" title="Total"  
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'14px'}"
