--- a/src/app/dailogs/show-sku/show-sku.component.html
+++ b/src/app/dailogs/show-sku/show-sku.component.html
@@ -1,4 +1,5 @@
-<table class="table">
+<div class="sku-model">
+<table class="table table-striped table-condensed">
   <thead>
     <th>Product Code</th>
     <th>Product Name</th>
@@ -11,3 +12,4 @@
   </tbody>
 
 </table>
+</div>
