--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <app-sale-nav>
 
     <div fxLayout="row" fxLayout.xs="column " fxFlexAlign="center center" style="height: 100;margin-top:5%">
-    <div fxFlex="50" fxFlex.xs="90" fxFlex.sm="90" style="margin: 0 auto">
+    <div fxFlex="80" fxFlex.xs="90" fxFlex.sm="90" style="margin: 0 auto">
     <kendo-pdf-export #pdf paperSize="A4" margin="1cm" [scale]="0.7">
       
     <div class="items">
@@ -12,44 +12,44 @@
                               [style]="tableStyleHeader" >
           </kendo-grid-column> -->
           <kendo-grid-column field="calculationType" title=""
-                              [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'14px'}"
+                              [headerStyle]="headerStyle"
                               [style]="tableStyle" [footerStyle]="rightAlign">
           </kendo-grid-column>
-          <kendo-grid-column field="tier1" title="Tier1"
-                              [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'14px'}"
+          <kendo-grid-column field="tier1" title="HP"
+                              [headerStyle]="headerStyle"
                               [style]="tableStyle" [footerStyle]="rightAlign" >
 
                             <ng-template kendoGridCellTemplate let-dataItem>
-                               <a [ngClass]="{'sku-class':dataItem.isSku,'no-sku-class':!dataItem.isSku}" (click)="onSkuClick(dataItem.sku_tier1)">{{dataItem.tier1}}</a>
+                               <a [ngClass]="{'sku-class':dataItem.sku_tier1,'no-sku-class':!dataItem.sku_tier1}" (click)="onSkuClick(dataItem.sku_tier1)">{{dataItem.tier1}}</a>
                             </ng-template>
              
           </kendo-grid-column>
           <kendo-grid-column field="tier2" title="Tier2"
-                              [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'14px'}"
+                              [headerStyle]="headerStyle"
                               [style]="tableStyle" [footerStyle]="rightAlign">
                               <ng-template kendoGridCellTemplate let-dataItem>
-                                <a [ngClass]="{'sku-class':dataItem.isSku,'no-sku-class':!dataItem.isSku}" (click)="onSkuClick(dataItem.sku_tier2)">{{dataItem.tier2}}</a>
+                                <a [ngClass]="{'sku-class':dataItem.sku_tier1,'no-sku-class':!dataItem.sku_tier1}" (click)="onSkuClick(dataItem.sku_tier2)">{{dataItem.tier2}}</a>
                              </ng-template>
           </kendo-grid-column>
           <kendo-grid-column field="tier3" title="Tier3"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'14px'}"
                               [style]="tableStyle" [footerStyle]="rightAlign">
                               <ng-template kendoGridCellTemplate let-dataItem>
-                                <a [ngClass]="{'sku-class':dataItem.isSku,'no-sku-class':!dataItem.isSku}" (click)="onSkuClick(dataItem.sku_tier3)">{{dataItem.tier3}}</a>
+                                <a [ngClass]="{'sku-class':dataItem.sku_tier1,'no-sku-class':!dataItem.sku_tier1}" (click)="onSkuClick(dataItem.sku_tier3)">{{dataItem.tier3}}</a>
                              </ng-template>
           </kendo-grid-column>
           <kendo-grid-column field="tier4" title="Tier4"
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'14px'}"
                               [style]="tableStyle" [footerStyle]="rightAlign">
                               <ng-template kendoGridCellTemplate let-dataItem>
-                                <a [ngClass]="{'sku-class':dataItem.isSku,'no-sku-class':!dataItem.isSku}" (click)="onSkuClick(dataItem.sku_tier4)">{{dataItem.tier4}}</a>
+                                <a [ngClass]="{'sku-class':dataItem.sku_tier1,'no-sku-class':!dataItem.sku_tier1}" (click)="onSkuClick(dataItem.sku_tier4)">{{dataItem.tier4}}</a>
                              </ng-template>
           </kendo-grid-column>
           <kendo-grid-column field="total" title="Total"  
                               [headerStyle]="{'background-color': '#666','color': '#fff','line-height': '1em','font-size':'14px'}"
                               [style]="tableStyle" [footerStyle]="rightAlign">
                               <ng-template kendoGridCellTemplate let-dataItem>
-                                <a [ngClass]="{'sku-class':dataItem.isSku,'no-sku-class':!dataItem.isSku}" (click)="onSkuClick(dataItem.sku_total)">{{dataItem.total}}</a>
+                                <a [ngClass]="{'sku-class':dataItem.sku_tier1,'no-sku-class':!dataItem.sku_tier1}" (click)="onSkuClick(dataItem.sku_total)">{{dataItem.total}}</a>
                              </ng-template>
           </kendo-grid-column>
          
